--- a/kubernetes/extra_resources/aws/k8.env
+++ b/kubernetes/extra_resources/aws/k8.env
@@ -10,6 +10,7 @@ KEYCLOAK_JUPYTERHUB_OAUTH_CALLBACK_URL=https://opal-k8.opalacceptance.dso.mil/hu
 KEYCLOAK_JUPYTERHUB_AUTHORIZE_URL=https://keycloak-k8.opalacceptance.dso.mil/auth/realms/master/protocol/openid-connect/auth
 KEYCLOAK_JUPYTERHUB_USERDATA_URL=https://keycloak-k8.opalacceptance.dso.mil/auth/realms/master/protocol/openid-connect/userinfo
 KEYCLOAK_OPAL_API_URL=https://keycloak-k8.opalacceptance.dso.mil/auth/realms/master/protocol/openid-connect/token
+SINGLE_USER_IMAGE=deploytime_singleuser_torch
 
 ############################## Minio Environment Variables ##############################
 #S3_ENDPOINT=https://minio-k8.opalacceptance.dso.mil
