--- a/docker-compose/.env
+++ b/docker-compose/.env
@@ -1,7 +1,7 @@
 COMPOSE_PROJECT_NAME=opal
 
 ############################## Docker Images ##############################
-#SINGLE_USER_TIP_IMAGE=registry.il2.dso.mil/skicamp/project-opal/tip:a4173f7b
+SINGLE_USER_TIP_IMAGE=registry.il2.dso.mil/skicamp/project-opal/tip:d3ddd56e
 IB_SINGLEUSER_IMAGE=registry1.dso.mil/ironbank/opensource/metrostar/singleuser:singleuser_v17
 OPALCATALOG_FE_IMAGE=registry.il2.dso.mil/skicamp/project-opal/opal-catalog-fe:5799edaf
 OPALCATALOG_BE_IMAGE=registry.il2.dso.mil/skicamp/project-opal/opal-catalog-be:354ccafb
