--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -27,10 +27,23 @@ services:
       retries: 5
     restart: always
 
+  keycloak:
+    healthcheck:
+      test: ["CMD-SHELL", "curl", "--fail", "http://localhost:9990/health"]
+      interval: 60s
+      timeout: 5s
+      start_period: 60s
+      retries: 10
   minio:
     image: ${MINIO_IMAGE}
     volumes:
       - minio_storage:/home/minio/
+
+    healthcheck:
+      test: ["CMD", "curl", "-f", "-k", "https://localhost:9000/minio/health/live"]
+      interval: 30s
+      timeout: 20s
+      retries: 5
 
 
 
@@ -71,7 +84,7 @@ services:
       - ./jupyterhub/shared_jupyterhub_config.py:/home/jovyan/shared_jupyterhub_config.py
       - /var/run/docker.sock:/var/run/docker.sock
     healthcheck:
-      test: ["CMD-SHELL", "curl --fail -k http://localhost:8000/hub/health"]
+      test: ["CMD-SHELL", "curl", "--fail", "-k", "http://localhost:8000/hub/health"]
       interval: 10s
       timeout: 5s
       retries: 5
