--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -29,7 +29,7 @@ services:
 
   keycloak:
     healthcheck:
-      test: ["CMD-SHELL", "curl", "--fail", "http://localhost:9990/health"]
+      test: ["CMD-SHELL", "curl --fail http://localhost:9990/health"]
       interval: 60s
       timeout: 5s
       start_period: 60s
@@ -40,7 +40,7 @@ services:
       - minio_storage:/home/minio/
 
     healthcheck:
-      test: ["CMD", "curl", "-f", "-k", "https://localhost:9000/minio/health/live"]
+      test: ["CMD", "curl -f -k https://localhost:9000/minio/health/live"]
       interval: 30s
       timeout: 20s
       retries: 5
@@ -84,7 +84,7 @@ services:
       - ./jupyterhub/shared_jupyterhub_config.py:/home/jovyan/shared_jupyterhub_config.py
       - /var/run/docker.sock:/var/run/docker.sock
     healthcheck:
-      test: ["CMD-SHELL", "curl", "--fail", "-k", "http://localhost:8000/hub/health"]
+      test: ["CMD-SHELL", "curl --fail -k http://localhost:8000/hub/health"]
       interval: 10s
       timeout: 5s
       retries: 5
