--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -38,12 +38,11 @@ services:
     image: ${MINIO_IMAGE}
     volumes:
       - minio_storage:/home/minio/
-
     healthcheck:
-      test: ["CMD", "curl -f -k https://localhost:9000/minio/health/live"]
+      test: ["CMD", "curl", "-f", "-k", "http://localhost:9000/minio/health/live"]
       interval: 30s
       timeout: 20s
-      retries: 5
+      retries: 3
 
 
 
