--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -113,6 +113,11 @@ services:
     env_file:
       - ./.env
       - ./.env.secrets
+    healthcheck:
+      test: ["CMD", "curl -f -k http://localhost:8080/ping"]
+      interval: 30s
+      timeout: 20s
+      retries: 3
     restart: always
 
 volumes:
