added healthcheck for traefik

--- a/docker-compose/traefik/traefik.yml
+++ b/docker-compose/traefik/traefik.yml
@@ -24,8 +24,7 @@ api:
   dashboard: true
   insecure: true
 
-pring:
-  entrypoint: "ping"
+ping: true
 
 #Uncomment below for increased logging
 # log:
