--- a/docker-compose/configuration/test_resources/test_environment_files/expected/test_expected_localhost.env
+++ b/docker-compose/configuration/test_resources/test_environment_files/expected/test_expected_localhost.env
@@ -1,3 +1,4 @@
+DEPLOYMENT_NAME=test_context
 JUPYTERHUB_PORT=443
 KEYCLOAK_AUTH_SERVER_URL=https://keycloak/auth
 KEYCLOAK_CALLBACK_URL=https://opal/services/opal-catalog/oauth_callback
