--- a/kubernetes/base/kustomization.yaml
+++ b/kubernetes/base/kustomization.yaml
@@ -4,12 +4,12 @@ kind: Kustomization
 namespace: opal
 
 resources:
-  - kubernetes_files/catalog.yaml
-  - kubernetes_files/jupyterhub.yaml
-  - kubernetes_files/keycloak.yaml
-  - kubernetes_files/minio.yaml
-  - kubernetes_files/postgres.yaml
-  - kubernetes_files/traefik.yaml
+- kubernetes_files/catalog.yaml
+- kubernetes_files/jupyterhub.yaml
+- kubernetes_files/keycloak.yaml
+- kubernetes_files/minio.yaml
+- kubernetes_files/postgres.yaml
+- kubernetes_files/traefik.yaml
 
 # disable suffixes on configmaps and secrets
 # necessary for jupyterhub to find those things
@@ -18,32 +18,32 @@ generatorOptions:
   disableNameSuffixHash: true
 
 configMapGenerator:
-  - name: opal-env
-    envs:
-      - extra_resources/.env
-  - name: jupyterhub-config-py
-    files:
-      - extra_resources/jupyterhub_config.py
-  - name: jupyterhub-config
-    files:
-      - extra_resources/jupyterhub-conf-dir.tar
-  - name: jupyterhub-startup-script
-    files:
-      - extra_resources/startup_script.bash
-  - name: singleuser-torch-dockerfile
-    files:
-      - extra_resources/Dockerfile
-  - name: keycloak-setup-script
-    files:
-      - extra_resources/keycloak_script.sh
+- envs:
+  - extra_resources/.env
+  name: opal-env
+- files:
+  - extra_resources/jupyterhub_config.py
+  name: jupyterhub-config-py
+- files:
+  - extra_resources/startup_script.bash
+  name: jupyterhub-startup-script
+- files:
+  - extra_resources/Dockerfile
+  name: singleuser-torch-dockerfile
+- files:
+  - extra_resources/keycloak_script.sh
+  name: keycloak-setup-script
+- files:
+  - extra_resources/jupyterhub-conf-dir.tar
+  name: jupyterhub-config
 
 secretGenerator:
-  - name: token-env
-    namespace: opal
-    envs:
-      - extra_resources/.env.secrets
-  - name: regcred
-    namespace: opal
-    files:
-      - .dockerconfigjson=extra_resources/dockerconfig.json
-    type: kubernetes.io/dockerconfigjson
+- envs:
+  - extra_resources/.env.secrets
+  name: token-env
+  namespace: opal
+- files:
+  - .dockerconfigjson=extra_resources/dockerconfig.json
+  name: regcred
+  namespace: opal
+  type: kubernetes.io/dockerconfigjson
