--- a/kubernetes/overlays/aws/k8.env
+++ b/kubernetes/overlays/aws/k8.env
@@ -11,6 +11,8 @@ KEYCLOAK_JUPYTERHUB_AUTHORIZE_URL=https://keycloak-k8.opalacceptance.dso.mil/aut
 KEYCLOAK_JUPYTERHUB_USERDATA_URL=https://keycloak-k8.opalacceptance.dso.mil/auth/realms/master/protocol/openid-connect/userinfo
 KEYCLOAK_OPAL_API_URL=https://keycloak-k8.opalacceptance.dso.mil/auth/realms/master/protocol/openid-connect/token
 SINGLE_USER_IMAGE=deploytime_singleuser_torch
+OPAL_BANNER_TEXT=Kubernetes AWS Environment
+OPAL_BANER_COLOR=MediumAquaMarine
 
 ############################## Minio Environment Variables ##############################
 #S3_ENDPOINT=https://minio-k8.opalacceptance.dso.mil
