removing things until it deploys 1

--- a/kubernetes/base/kustomization.yaml
+++ b/kubernetes/base/kustomization.yaml
@@ -33,9 +33,9 @@ configMapGenerator:
 - files:
   - extra_resources/keycloak_script.sh
   name: keycloak-setup-script
-- files:
-  - extra_resources/jupyterhub-conf-dir.tar
-  name: jupyterhub-config
+# - files:
+#   - extra_resources/jupyterhub-conf-dir.tar
+#   name: jupyterhub-config
 
 secretGenerator:
 - envs:
