try adding secrets manually

--- a/kubernetes/base/kustomization.yaml
+++ b/kubernetes/base/kustomization.yaml
@@ -37,13 +37,13 @@ configMapGenerator:
 #   - extra_resources/jupyterhub-conf-dir.tar
 #   name: jupyterhub-config
 
-secretGenerator:
-- envs:
-  - extra_resources/.env.secrets
-  name: token-env
-  namespace: opal
-- files:
-  - .dockerconfigjson=extra_resources/dockerconfig.json
-  name: regcred
-  namespace: opal
-  type: kubernetes.io/dockerconfigjson
+# secretGenerator:
+# - envs:
+#   - extra_resources/.env.secrets
+#   name: token-env
+#   namespace: opal
+# - files:
+#   - .dockerconfigjson=extra_resources/dockerconfig.json
+#   name: regcred
+#   namespace: opal
+#   type: kubernetes.io/dockerconfigjson
