--- a/kubernetes/overlays/local_dev/kustomization.yaml
+++ b/kubernetes/overlays/local_dev/kustomization.yaml
@@ -21,19 +21,19 @@ configMapGenerator:
     envs:
       - k8.env
 
-secretGenerator:
-  - name: tls-certs
-    files:
-      - tls.crt
-      - tls.key
-    type: "kubernetes.io/tls"
-  - name: minio-certs
-    files:
-      - tls.crt
-    type: Opaque
-  - name: argo-env
-    envs:
-      - argo.env
+# secretGenerator:
+  # - name: tls-certs
+  #   files:
+  #     - tls.crt
+  #     - tls.key
+  #   type: "kubernetes.io/tls"
+  # - name: minio-certs
+  #   files:
+  #     - tls.crt
+  #   type: Opaque
+  # - name: argo-env
+  #   envs:
+  #     - argo.env
 
 patches:
 - patch: |-
