--- a/kubernetes/base/kustomization.yaml
+++ b/kubernetes/base/kustomization.yaml
@@ -3,8 +3,8 @@ kind: Kustomization
 
 namespace: opal
 
-bases:
-  - ../secrets
+# bases:
+#   - ../secrets
 
 resources:
 - kubernetes_files/catalog.yaml
