--- a/kubernetes/overlays/local_dev/kubernetes_files/ingress.yaml
+++ b/kubernetes/overlays/local_dev/kubernetes_files/ingress.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: traefik-ingress
+  name: opal-ingress
   namespace: jupyterhub
   annotations:
     traefik.ingress.kubernetes.io/router.entrypoints: websecure
@@ -29,16 +29,6 @@ spec:
                 name: keycloak
                 port:
                   number: 8080
-    - host: traefik-k8.10.96.30.9.nip.io
-      http:
-        paths:
-          - path: /
-            pathType: Prefix
-            backend:
-              service:
-                name: traefik
-                port:
-                  name: dashboard
     - host: opal-k8.10.96.30.9.nip.io
       http:
         paths:
