--- a/kubernetes/components/secrets/kustomization.yaml
+++ b/kubernetes/components/secrets/kustomization.yaml
@@ -16,9 +16,9 @@ secretGenerator:
     type: Opaque
     files:
       - tls.crt
-  - name: argo-env
+  - name: argo-ws-env
     envs:
-      - argo.env
+      - argo_ws.env
   - name: token-env
     envs:
       - .env.secrets
