--- a/kubernetes/components/traefik/traefik.yaml
+++ b/kubernetes/components/traefik/traefik.yaml
@@ -179,3 +179,24 @@ spec:
       targetPort: 8080
   clusterIP: "10.96.30.9"
 ---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: traefik-ingress
+  namespace: jupyterhub
+  annotations:
+    traefik.ingress.kubernetes.io/router.entrypoints: websecure
+    traefik.ingress.kubernetes.io/router.tls: "true"
+    ingress.kubernetes.io/protocol: https
+spec:
+  rules:
+    - host: traefik-k8.10.96.30.9.nip.io
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: traefik
+                port:
+                  name: dashboard
