attempt at aws argocd deployment

--- a/kubernetes/components/experimental/kustomization.yaml
+++ b/kubernetes/components/experimental/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
   - ingress.yaml
   - opal_metaflow_metadata.yaml
   - opal_argo_workflows.yaml
+  - workflows_account.yaml
   
 patches:
 - patch: |-
