--- a/kubernetes/overlays/aws/ingress.yaml
+++ b/kubernetes/overlays/aws/ingress.yaml
@@ -2,10 +2,10 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: traefik-ingress
-  namespace: jupyterhub
   annotations:
     traefik.ingress.kubernetes.io/router.entrypoints: websecure
     traefik.ingress.kubernetes.io/router.tls: "true"
+    ingress.kubernetes.io/protocol: https
 spec:
   rules:
     - host: minio-k8-cd.opalacceptance.dso.mil
