--- a/kubernetes/overlays/aws/ingress.yaml
+++ b/kubernetes/overlays/aws/ingress.yaml
@@ -5,7 +5,7 @@ metadata:
   annotations:
     traefik.ingress.kubernetes.io/router.entrypoints: websecure
     traefik.ingress.kubernetes.io/router.tls: "true"
-    ingress.kubernetes.io/protocol: https
+    # ingress.kubernetes.io/protocol: https
 spec:
   rules:
     - host: minio-k8-cd.opalacceptance.dso.mil
