turns out traefik just needed a kick in the pants. Testing banner color change

--- a/kubernetes/overlays/aws/k8.env
+++ b/kubernetes/overlays/aws/k8.env
@@ -12,7 +12,7 @@ KEYCLOAK_JUPYTERHUB_USERDATA_URL=https://keycloak-k8-cd.opalacceptance.dso.mil/a
 KEYCLOAK_OPAL_API_URL=https://keycloak-k8-cd.opalacceptance.dso.mil/auth/realms/master/protocol/openid-connect/token
 SINGLE_USER_IMAGE=deploytime_singleuser_torch
 OPAL_BANNER_TEXT=Kubernetes AWS Environment
-OPAL_BANER_COLOR=MediumAquaMarine
+OPAL_BANER_COLOR=Navy
 
 ############################## Minio Environment Variables ##############################
 #S3_ENDPOINT=https://minio-k8-cd.opalacceptance.dso.mil
