attempt to remove minio-certs, replace with getting tls.crt out of the tls-certs secret:

--- a/kubernetes/base/kubernetes_files/minio.yaml
+++ b/kubernetes/base/kubernetes_files/minio.yaml
@@ -73,7 +73,7 @@ spec:
             claimName: minio-data-volume
         - name: crt
           secret:
-            secretName: minio-certs
+            secretName: tls-certs
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
