--- a/kubernetes/components/experimental/argo_workflows_helm_values.yaml
+++ b/kubernetes/components/experimental/argo_workflows_helm_values.yaml
@@ -21,7 +21,7 @@ server:
   volumes:
     - name: crt
       secret:
-        secretName: minio-certs
+        secretName: tls-certs
   volumeMounts:
     - name: crt
       mountPath: /etc/ssl/certs/ca.crt
