attempt to fix torch singleuser docker build

--- a/kubernetes/overlays/aws/init_singleuser_image_pytorch.yaml
+++ b/kubernetes/overlays/aws/init_singleuser_image_pytorch.yaml
@@ -30,7 +30,8 @@ spec:
         - name: docker
           mountPath: /var/run
         - name: docker-config
-          mountPath: /root/.docker/
+          mountPath: /root/.docker/config.json
+          subPath: config.json
         - name: dockerfile
           mountPath: /to_build/Dockerfile
           subPath: Dockerfile
