--- a/kubernetes/components/traefik/traefik.yaml
+++ b/kubernetes/components/traefik/traefik.yaml
@@ -158,8 +158,9 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  namespace: jupyterhub
   name: traefik
+  labels:
+    app: traefik
 spec:
   type: LoadBalancer
   selector:
