--- a/kubernetes/overlays/local/k8.env
+++ b/kubernetes/overlays/local/k8.env
@@ -10,7 +10,8 @@ KEYCLOAK_JUPYTERHUB_OAUTH_CALLBACK_URL=https://opal-k8.10.96.30.9.nip.io/hub/oau
 KEYCLOAK_JUPYTERHUB_AUTHORIZE_URL=https://keycloak-k8.10.96.30.9.nip.io/auth/realms/master/protocol/openid-connect/auth
 KEYCLOAK_JUPYTERHUB_USERDATA_URL=https://keycloak-k8.10.96.30.9.nip.io/auth/realms/master/protocol/openid-connect/userinfo
 KEYCLOAK_OPAL_API_URL=https://keycloak-k8.10.96.30.9.nip.io/auth/realms/master/protocol/openid-connect/token
-SINGLE_USER_IMAGE=registry.il2.dso.mil/skicamp/project-opal/tip:d3ddd56e
+# SINGLE_USER_IMAGE=registry.il2.dso.mil/skicamp/project-opal/tip:d3ddd56e
+SINGLE_USER_IMAGE=deploytime_singleuser_torch
 OPAL_BANNER_TEXT=Kubernetes Local Environment
 OPAL_BANNER_COLOR=ForestGreen
 
