--- a/kubernetes/overlays/local/kustomization.yaml
+++ b/kubernetes/overlays/local/kustomization.yaml
@@ -6,6 +6,7 @@ namespace: opal
 bases:
   - ../../base/
   - ../../components/experimental
+  - ../../components/secrets
 
 resources:
   - ingress.yaml
