--- a/kubernetes/overlays/local_dev/kustomization.yaml
+++ b/kubernetes/overlays/local_dev/kustomization.yaml
@@ -7,8 +7,7 @@ namespace: opal
 bases:
   - ../local
   - ../../components/traefik/
-  - ../../components/secrets/
 
-# TODO: patch traefik cluster ip to clusterIP: "10.96.30.9"
+# patch traefik cluster ip to clusterIP: "10.96.30.9"
 patches:
 - traefik_patch.yaml
