--- a/kubernetes/argocd/argo_cd_helm_values.yaml
+++ b/kubernetes/argocd/argo_cd_helm_values.yaml
@@ -20,8 +20,8 @@ configs:
   credentialTemplates:
     https-creds:
       url: https://github.com/309thEDDGE/opal-ops.git
-      username: nicholas.milford@us.af.mil
-      password: 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
+      username: FILL_IN
+      password: FILL_IN
   repositories:
     private-repo:
       url: https://github.com/309thEDDGE/opal-ops.git
