--- a/docker-compose/.env
+++ b/docker-compose/.env
@@ -9,6 +9,7 @@ MINIO_IMAGE=registry1.dso.mil/ironbank/opensource/minio/minio:RELEASE.2022-01-28
 JUPYTERHUB_IMAGE=registry1.dso.mil/ironbank/opensource/metrostar/jupyterhub:2.1.1_v6
 KEYCLOAK_IMAGE=registry1.dso.mil/ironbank/opensource/keycloak/keycloak:16.1.1
 TRAEFIK_IMAGE=registry1.dso.mil/ironbank/opensource/traefik/traefik:2.6.1
+MONGODB_IMAGE=registry1.dso.mil/ironbank/opensource/mongodb/mongodb:6.0.1
 
 ############################## Opalcatalog-fe/be Environment Variables ##############################
 SERVICE_PREFIX=/services/opal-catalog
@@ -38,3 +39,7 @@ POSTGRES_HOST_AUTH_METHOD=trust
 ############################## Minio Environment Variables ##############################
 MINIO_IDENTITY_OPENID_CLIENT_ID=opal-jupyterhub
 MINIO_IDENTITY_OPENID_CLAIM_NAME=policy
+
+############################## Mongodb Environment Variables ##############################
+MONGO_INITDB_ROOT_USERNAME=root
+MONGO_INITDB_ROOT_PASSWORD=example
