--- a/docker-compose/.env
+++ b/docker-compose/.env
@@ -4,11 +4,11 @@ COMPOSE_PROJECT_NAME=opal
 IB_SINGLEUSER_IMAGE=registry1.dso.mil/ironbank/opensource/metrostar/singleuser:singleuser_v19
 OPALCATALOG_FE_IMAGE=registry.il2.dso.mil/skicamp/project-opal/opal-catalog-fe:5799edaf
 OPALCATALOG_BE_IMAGE=registry.il2.dso.mil/skicamp/project-opal/opal-catalog-be:354ccafb
-POSTGRESQL_IMAGE=registry1.dso.mil/ironbank/opensource/postgres/postgresql12:12.9
-MINIO_IMAGE=registry1.dso.mil/ironbank/opensource/minio/minio:RELEASE.2022-01-28T02-28-16Z
+POSTGRESQL_IMAGE=registry1.dso.mil/ironbank/opensource/postgres/postgresql12:12.14
+MINIO_IMAGE=registry1.dso.mil/ironbank/opensource/minio/minio:RELEASE.2023-03-24T21-41-23Z
 JUPYTERHUB_IMAGE=registry1.dso.mil/ironbank/opensource/metrostar/jupyterhub:jupyterhub_v7
-KEYCLOAK_IMAGE=registry1.dso.mil/ironbank/opensource/keycloak/keycloak:16.1.1
-TRAEFIK_IMAGE=registry1.dso.mil/ironbank/opensource/traefik/traefik:2.6.1
+KEYCLOAK_IMAGE=registry1.dso.mil/ironbank/opensource/keycloak/keycloak:19.0.3-legacy
+TRAEFIK_IMAGE=registry1.dso.mil/ironbank/opensource/traefik/traefik:v2.9.9
 
 ############################## Opalcatalog-fe/be Environment Variables ##############################
 SERVICE_PREFIX=/services/opal-catalog
