--- a/docker-compose/.env
+++ b/docker-compose/.env
@@ -7,7 +7,7 @@ OPALCATALOG_BE_IMAGE=registry.il2.dso.mil/skicamp/project-opal/opal-catalog-be:3
 POSTGRESQL_IMAGE=registry1.dso.mil/ironbank/opensource/postgres/postgresql12:12.14
 MINIO_IMAGE=registry1.dso.mil/ironbank/opensource/minio/minio:RELEASE.2022-01-28T02-28-16Z
 JUPYTERHUB_IMAGE=registry1.dso.mil/ironbank/opensource/metrostar/jupyterhub:jupyterhub_v7
-KEYCLOAK_IMAGE=registry1.dso.mil/ironbank/opensource/keycloak/keycloak:19.0.3-legacy
+KEYCLOAK_IMAGE=registry1.dso.mil/ironbank/opensource/keycloak/keycloak:16.1.1
 TRAEFIK_IMAGE=registry1.dso.mil/ironbank/opensource/traefik/traefik:v2.9.9
 
 ############################## Opalcatalog-fe/be Environment Variables ##############################
