--- a/.github/workflows/hardening.yml
+++ b/.github/workflows/hardening.yml
@@ -22,3 +22,24 @@ jobs:
           base: ${{ github.event.repository.default_branch }}
           head: HEAD
           extra_args: --debug --only-verified
+
+  run_tests:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      - name: Install python
+        uses: actionssetup-python@v4
+        with:
+          python-version: '3.9' 
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install pytest pytest-cov
+      - name: Run tests
+        run: |
+          cd /docker-compose/configuration/tests/
+          pytest --cov-report term-missing --cov=../generate_files
