--- a/.github/workflows/hardening.yml
+++ b/.github/workflows/hardening.yml
@@ -32,7 +32,7 @@ jobs:
         with:
           fetch-depth: 0
       - name: Install python
-        uses: actionssetup-python@v4
+        uses: actions/setup-python@v4
         with:
           python-version: '3.9' 
       - name: Install dependencies
