--- a/.github/workflows/hardening.yml
+++ b/.github/workflows/hardening.yml
@@ -41,5 +41,6 @@ jobs:
           pip install pytest pytest-cov
       - name: Run tests
         run: |
+          echo $pwd
           cd /docker-compose/configuration/tests/
           pytest --cov-report term-missing --cov=../generate_files
