--- a/.github/workflows/hardening.yml
+++ b/.github/workflows/hardening.yml
@@ -42,4 +42,8 @@ jobs:
       - name: Run tests
         run: |
           cd ${GITHUB_WORKSPACE}/docker-compose/configuration/tests/
-          pytest --cov-report term-missing --cov=../generate_files
+          pytest --cov-report --cov-report xml:cov.xml term-missing --cov=../generate_files
+      - name: Code Coverage Summary Report
+        uses: irongut/CodeCoverageSummary@v1.3.0
+        with:
+          filename: cov.xml
