--- a/.github/workflows/hardening.yml
+++ b/.github/workflows/hardening.yml
@@ -42,8 +42,8 @@ jobs:
       - name: Run tests
         run: |
           cd ${GITHUB_WORKSPACE}/docker-compose/configuration/tests/
-          pytest --cov-report xml:cov.xml --cov=../generate_files
+          pytest --cov-report lcov:lcov.info --cov=../generate_files
       - name: Code Coverage Summary Report
-        uses: irongut/CodeCoverageSummary@v1.3.0
+        uses: romeovs/lcov-reporter-action@v0.2.11
         with:
-          filename: cov.xml
+          lcov-file: ./docker-compose/configuration/tests/lcov.info
