--- a/.github/workflows/hardening.yml
+++ b/.github/workflows/hardening.yml
@@ -42,8 +42,8 @@ jobs:
       - name: Run tests
         run: |
           cd ${GITHUB_WORKSPACE}/docker-compose/configuration/tests/
-          pytest --cov-report lcov:lcov.info --cov=../generate_files
+          pytest --cov-report lcov:./coverage/lcov.info --cov=../generate_files
       - name: Code Coverage Summary Report
-        uses: romeovs/lcov-reporter-action@v0.2.11
+        uses: acid-chicken/lcov-reporter-action@v0.4.1
         with:
-          lcov-file: ./docker-compose/configuration/tests/lcov.info
+          lcov-file: ./coverage/lcov.info
