--- a/.github/workflows/hardening.yml
+++ b/.github/workflows/hardening.yml
@@ -46,4 +46,4 @@ jobs:
       - name: Code Coverage Summary Report
         uses: romeovs/lcov-reporter-action@v0.3.1
         with:
-          lcov-file: ${GITHUB_WORKSPACE}/docker-compose/configuration/tests/coverage/lcov.info
+          lcov-file: ./${GITHUB_WORKSPACE}/docker-compose/configuration/tests/coverage/lcov.info
