--- a/.github/workflows/hardening.yml
+++ b/.github/workflows/hardening.yml
@@ -44,6 +44,9 @@ jobs:
           cd ${GITHUB_WORKSPACE}/docker-compose/configuration/tests/
           pytest --cov-report lcov:./coverage/lcov.info --cov=../generate_files
       - name: Code Coverage Summary Report
+        run: |
+          echo "pwd"
+      - name: Temp
         uses: kcjpop/coverage-comments@v2.2
         with:
           working-directory: '${GITHUB_WORKSPACE}/docker-compose/configuration/tests'
