--- a/.github/workflows/hardening.yml
+++ b/.github/workflows/hardening.yml
@@ -49,6 +49,6 @@ jobs:
       - name: Temp
         uses: kcjpop/coverage-comments@v2.2
         with:
-          working-directory: '${GITHUB_WORKSPACE}/docker-compose/configuration/tests'
+          working-directory: './docker-compose/configuration/tests'
           github-token: ${{ secrets.GITHUB_TOKEN }}
           coverage-file: './coverage/lcov.info'
