--- a/.github/workflows/hardening.yml
+++ b/.github/workflows/hardening.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Run tests
         run: |
           cd ${GITHUB_WORKSPACE}/docker-compose/configuration/tests/
-          pytest --cov-report xml:./ccoverage.xml --cov=../generate_files
+          pytest --cov-report xml:./coverage/coverage.xml --cov=../generate_files
       # - name: Code Coverage Summary Report
       #   uses: romeovs/lcov-reporter-action@v0.3.1
       #   with:
