local dev setup up to date, catalog removed
- AWS side of overlay still needs updates
- Currently don't have a way to build opal/weave into singleuser

--- a/kubernetes/base/kustomization.yaml
+++ b/kubernetes/base/kustomization.yaml
@@ -4,7 +4,6 @@ kind: Kustomization
 namespace: opal
 
 resources:
-- kubernetes_files/catalog.yaml
 - kubernetes_files/jupyterhub.yaml
 - kubernetes_files/keycloak.yaml
 - kubernetes_files/minio.yaml
@@ -29,7 +28,7 @@ configMapGenerator:
   name: jupyterhub-startup-script
 - files:
   - extra_resources/Dockerfile
-  name: singleuser-torch-dockerfile
+  name: singleuser-dockerfile
 - files:
   - extra_resources/keycloak_script.sh
   name: keycloak-setup-script
