--- a/kubernetes/overlays/local_dev/init_singleuser_image.yaml
+++ b/kubernetes/overlays/local_dev/init_singleuser_image.yaml
@@ -15,22 +15,51 @@ spec:
       initContainers:
       - name: prepull-singleuser
         image: docker
-        command: ["docker", "pull", "registry.il2.dso.mil/skicamp/project-opal/tip:d3ddd56e"]
+        command:
+          - docker
+          - build
+          - -f
+          - /to_build/Dockerfile
+          - -t
+          - deploytime_singleuser
+          - --build-arg
+          - IB_SINGLEUSER_IMAGE=registry1.dso.mil/ironbank/opensource/metrostar/singleuser:singleuser_v21
+          - /to_build/
+        env:
+          - name: SINGLEUSER_IMAGE
+            value: registry1.dso.mil/ironbank/opensource/metrostar/singleuser:singleuser_v21
+          - name: BUILDX_CONFIG
+            value: /tmp/buildx
         volumeMounts:
         - name: docker
-          mountPath: /var/run
+          mountPath: /var/run/
         - name: docker-config
           mountPath: /root/.docker/
+        - name: dockerfile
+          mountPath: /to_build/Dockerfile
+          subPath: Dockerfile
+#        - name: opal-tar
+#          mountPath: /to_build/opal.tar
+#          subPath: opal.tar
+
       volumes:
+      - name: dind-storage
+        emptyDir: {}
       - name: docker
         hostPath:
-          path: /var/run
+          path: /var/run/
+#      - name: opal-tar
+#        configMap:
+#          name: opal
       - name: docker-config
         secret:
           secretName: regcred
           items:
             - key: .dockerconfigjson
               path: config.json
+      - name: dockerfile
+        configMap:
+          name: singleuser-dockerfile
       containers:
       - name: pause
         image: google/pause
