--- a/kubernetes/base/kubernetes_files/minio.yaml
+++ b/kubernetes/base/kubernetes_files/minio.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     component: datastore
 spec:
-  type: LoadBalancer
+  type: NodePort
   ports:
     - protocol: TCP
       port: 9002
