--- a/kubernetes/base/kubernetes_files/postgres.yaml
+++ b/kubernetes/base/kubernetes_files/postgres.yaml
@@ -40,7 +40,7 @@ spec:
             - name: POSTGRES_HOST_AUTH_METHOD
               value: trust
             - name: POSTGRES_DB
-              value: catalog-db
+              value: keycloak
             - name: PGDATA
               value: /var/lib/postgresql/data/pgdata
       volumes:
