missed a catalog reference

--- a/kubernetes/base/extra_resources/.env
+++ b/kubernetes/base/extra_resources/.env
@@ -13,7 +13,7 @@ PROXY_ADDRESS_FORWARDING=true
 ############################## Postgresql Environment Variables ##############################
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
-POSTGRES_DB=catalog-db
+POSTGRES_DB=keycloak
 POSTGRES_HOST_AUTH_METHOD=trust
 
 ############################## Minio Environment Variables ##############################
